/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */
syntax = "proto3";

package message.input;

import "google/protobuf/timestamp.proto";

message GameState {
    message Data {
        enum Mode {
            UNKNOWN_MODE     = 0;
            NORMAL           = 1;
            PENALTY_SHOOTOUT = 2;
            OVERTIME         = 3;
        }

        enum Phase {
            UNKNOWN_PHASE = 0;
            INITIAL       = 1;
            READY         = 2;
            SET           = 3;
            PLAYING       = 4;
            TIMEOUT       = 5;
            FINISHED      = 6;
        }

        enum PenaltyReason {
            UNKNOWN_PENALTY_REASON        = 0;
            UNPENALISED                   = 1;
            BALL_MANIPULATION             = 2;
            PHYSICAL_CONTACT              = 3;
            ILLEGAL_ATTACK                = 4;
            ILLEGAL_DEFENSE               = 5;
            REQUEST_FOR_PICKUP            = 6;
            REQUEST_FOR_SERVICE           = 7;
            REQUEST_FOR_PICKUP_TO_SERVICE = 8;
            SUBSTITUTE                    = 9;
            MANUAL                        = 10;
        }

        message Robot {
            uint32                    id             = 1;
            PenaltyReason             penalty_reason = 2;
            google.protobuf.Timestamp unpenalised    = 3;
        }

        message Team {
            uint32 team_id         = 1; // unique team number
            uint32 score           = 2; // team's score
            string coach_message   = 3; // the coach's message to the team
            repeated Robot players = 4;
        }

        Phase phase                               = 1;
        Mode mode                                 = 2;
        bool first_half                           = 3;
        bool kicked_out_by_us                     = 4;
        google.protobuf.Timestamp kicked_out_time = 5;
        bool our_kick_off                         = 6;
        google.protobuf.Timestamp primary_time    = 7;
        google.protobuf.Timestamp secondary_time  = 8;
        Team team                                 = 9;
        Team opponent                             = 10;
        Robot self                                = 11;
    }

    Data data = 1;
    string event = 2;
}