/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUbots <nubots@nubots.net>
 */
syntax = "proto3";

package message.support;

import "Vector.proto";

message FieldDescription {
    enum GoalpostType {
        RECTANGLE = 0;
        CIRCLE = 1;
    }

    message FieldDimensions {
        double line_width             = 1;
        double mark_width             = 2;
        double field_length           = 3;
        double field_width            = 4;
        GoalpostType goalpost_type    = 5;
        double goal_depth             = 6;
        double goal_width             = 7;
        double goal_area_length       = 8;
        double goal_area_width        = 9;
        double goal_crossbar_height   = 10;
        double goalpost_width         = 11;
        double goalpost_depth         = 12;
        double goal_crossbar_width    = 13;
        double goal_crossbar_depth    = 14;
        double goal_net_height        = 15;
        double penalty_mark_distance  = 16;
        double center_circle_diameter = 17;
        double border_strip_min_width = 18;
    }

    double          ball_radius         = 1;
    double          goalpost_top_height = 2;
    double          penalty_robot_start = 3;

    // Coordinates of goalpost centers calculated from the FieldDimensions:
    vec2            goalpost_own_l      = 4;
    vec2            goalpost_own_r      = 5;
    vec2            goalpost_opp_l      = 6;
    vec2            goalpost_opp_r      = 7;

    FieldDimensions dimensions          = 8;
}
